--- a/UI/styles.css
+++ b/UI/styles.css
@@ -50,9 +50,10 @@ header {
     padding: 1rem;
     border-bottom: 0.0625rem solid black;
     background-color: #DCDCDC;
-    width: 100%ж
+    width: 100%;
 }
 .filter-name {
+    display: flex;
     text-align: left;
     font-size: 1rem;
     font-weight: bold;
@@ -61,6 +62,7 @@ header {
     margin-bottom: 0rem;
 }
 .filter {
+    display: flex;
     border-width: 0.1rem;
     border-color: grey;
     cursor: text;
@@ -70,7 +72,7 @@ header {
     margin-left: 0.1rem;
 }
 .add-new-offer-button {
-    display: block;
+    display: flex;
     float: right;
     font-size: 0.7rem;
     font-weight: bold;
